--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -37,7 +37,8 @@
     "exclude": [
         "../src/node_modules",
         "node_modules",
-        "platforms"
+        "platforms",
+        "typings"
     ],
     "compileOnSave": false
 }
