--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,17 @@
 .idea
 .DS_Store
 *.esm.json
+*.tns.json
 *.js
 *.js.map
 *.log
 demo/typings
+demo-ng/typings
 src/*.d.ts
 !src/index.d.ts
 !src/references.d.ts
 !src/scripts/*.js
+demo-ng/enviornment.*
 !seed-tests/*.js
 seed-tests/seed-copy/**/*.*
 seed-tests/seed-copy-new-git-repo/**/*.*
@@ -24,3 +27,10 @@ publish/src
 publish/package
 demo/report/report.html
 demo/report/stats.json
+
+!demo-ng/karma.conf.js
+!demo-ng/app/tests/*.js
+demo-ng/*.d.ts
+!demo-ng/references.d.ts
+demo-ng/lib
+demo-ng/platforms
